--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelAdd.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelAdd.cshtml
@@ -2,7 +2,7 @@
 @model Msh.HotelCache.Models.Hotels.HotelBase;
 @{
 	ViewData["Title"] = "Add Hotel";
-    ViewBag.Success = new SuccessAlert
+    ViewBag.EditFormParam = new EditFormParam
     {
 	    ModelName = "Hotel",
 	    ReturnUrl = "/admin/hotels/hotellist",
