--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Loggers/LogXmlConfigEditItems.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Loggers/LogXmlConfigEditItems.cshtml
@@ -10,7 +10,7 @@
 
 	var group = ViewBag.Group as string ?? "Ows";
 
-	ViewBag.Success = new SuccessAlert
+	ViewBag.EditFormParam = new EditFormParam
 	{
 		ModelName = "LogXmlConfig",
 		ReturnUrl = "/admin/loggers",
