--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Ows/OwsConfigEditMap.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Ows/OwsConfigEditMap.cshtml
@@ -7,7 +7,7 @@
 	var title = "OWS Config Maps";
 	ViewData["Title"] = title;
 
-	ViewBag.Success = new SuccessAlert
+	ViewBag.EditFormParam = new EditFormParam
 	{
 		ModelName = "OwsConfigMap",
 		ReturnUrl = "/admin/ows",
