--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Ows/OwsConfigEditTriggers.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Ows/OwsConfigEditTriggers.cshtml
@@ -6,7 +6,7 @@
 	var title = "OWS Config Triggers";
 	ViewData["Title"] = title;
 
-	ViewBag.Success = new SuccessAlert
+	ViewBag.EditFormParam = new EditFormParam
 	{
 		ModelName = "CriticalErrorTrigger",
 		ReturnUrl = "/admin/ows",
