--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_ExtraEdit.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_ExtraEdit.cshtml
@@ -1,12 +1,11 @@
 ﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
-@using Microsoft.AspNetCore.Mvc.TagHelpers
 @using Msh.WebApp.Areas.Admin.Models
 @using Msh.WebApp.Models.Admin
 @using Msh.WebApp.TagHelpers
 @model Msh.HotelCache.Models.Extras.Extra;
 @{
-	var success = ViewBag.Success as SuccessAlert;
-	var formAction = success?.FormAction ?? "ExtraAdd";
+	var formParam= ViewBag.EditFormParam as EditFormParam;
+	var formAction = formParam?.FormAction ?? "ExtraAdd";
 	var hotelCode = ViewBag.HotelCode;
 	var title = ViewData["Title"];
 }
@@ -16,7 +15,7 @@
 	<p></p>
 </div>
 
-@await Html.PartialAsync("Admin/_AdminSaveSuccess", success)
+@await Html.PartialAsync("Admin/_AdminSaveSuccess", formParam)
 
 <div class="row">
 	<div class="col-12">
@@ -31,7 +30,7 @@
 					<div class="form-group mb-3">
 						<label asp-for="Code" class="control-label"></label>&nbsp;
 						<info-icon name="info-code" />
-						@await Html.PartialAsync("Hotels/_EditCode", success)
+						@await Html.PartialAsync("Hotels/_EditCode", formParam)
 					</div>
 			
 					<div class="form-group mb-3">
