--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_SpecialEdit.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_SpecialEdit.cshtml
@@ -5,8 +5,8 @@
 @using Msh.WebApp.TagHelpers
 @model Msh.HotelCache.Models.Specials.Special
 @{
-	var success = ViewBag.Success as SuccessAlert;
-	var formAction = success?.FormAction ?? "SpecialAdd";
+	var formParam= ViewBag.EditFormParam as EditFormParam;
+	var formAction = formParam?.FormAction ?? "SpecialAdd";
 	var hotelCode = ViewBag.HotelCode;
 	var title = ViewData["Title"];
 }
@@ -16,7 +16,7 @@
 	<p></p>
 </div>
 
-@await Html.PartialAsync("Admin/_AdminSaveSuccess", success)
+@await Html.PartialAsync("Admin/_AdminSaveSuccess", formParam)
 
 <div class="row">
 	<div class="col-12">
@@ -31,7 +31,7 @@
 					<div class="form-group mb-3">
 						<label asp-for="Code" class="control-label"></label>&nbsp;
 						<info-icon name="info-code" />
-						@await Html.PartialAsync("Hotels/_EditCode", success)
+						@await Html.PartialAsync("Hotels/_EditCode", formParam)
 					</div>
 				
 					<div class="form-check form-switch mb-3">
