--- a/solution/Msh/Msh.WebApp/Views/Shared/Admin/_AdminSaveSuccess.cshtml
+++ b/solution/Msh/Msh.WebApp/Views/Shared/Admin/_AdminSaveSuccess.cshtml
@@ -1,4 +1,4 @@
-﻿@model Msh.WebApp.Models.Admin.SuccessAlert
+﻿@model Msh.WebApp.Models.Admin.EditFormParam
 @{
 	var isSuccess = ViewBag?.IsSuccess ?? false;
 }
