--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/DiscountEditDatesBook.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/DiscountEditDatesBook.cshtml
@@ -27,8 +27,8 @@
 
 @await Html.PartialAsync("_SaveReturnButtons", new SaveReturnButtonsVm
 {
-	ReturnUrl = $"/Admin/Hotels/DiscountList?hotelCode={@hotelCode}&code={@itemCode}",
-	ReturnText = ConstReturnText.ReturnToDash,
+	ReturnUrl = $"/Admin/Hotels/DiscountsList?hotelCode={@hotelCode}&code={@itemCode}",
+	ReturnText = ConstReturnText.ReturnToList,
 	SaveOperation = "#save-dates"
 })
 
