--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/RatePlanAdd.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/RatePlanAdd.cshtml
@@ -6,7 +6,7 @@
 
 	var hotelCode = ViewBag.HotelCode;
 
-    ViewBag.Success = new SuccessAlert
+    ViewBag.EditFormParam = new EditFormParam
     {
 	    ModelName = "RoomRatePlan",
 	    ReturnUrl = "/admin/hotels/RatePlanList?hotelCode=" + hotelCode,
