--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/RoomTypeAdd.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/RoomTypeAdd.cshtml
@@ -6,7 +6,7 @@
 
 	var hotelCode = ViewBag.HotelCode;
 
-    ViewBag.Success = new SuccessAlert
+    ViewBag.EditFormParam = new EditFormParam
     {
 	    ModelName = "RoomType",
 	    ReturnUrl = "/admin/hotels/RoomTypeList?hotelCode=" + hotelCode,
