--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/SpecialEdit.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/SpecialEdit.cshtml
@@ -6,7 +6,7 @@
 
 	var hotelCode = ViewBag.HotelCode;
 
-	ViewBag.Success = new SuccessAlert
+	ViewBag.EditFormParam = new EditFormParam
 	{
 		ModelName = "Special",
 		ReturnUrl = "/admin/hotels/SpecialsList?hotelCode=" + hotelCode,
