--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/TestModelAdd.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/TestModelAdd.cshtml
@@ -4,7 +4,7 @@
 @{
 	ViewData["Title"] = "Add Test Model";
    
-	ViewBag.Success = new SuccessAlert
+	ViewBag.EditFormParam = new EditFormParam
 	{
 		ModelName = "TestModel",
 		ReturnUrl = "/admin/hotels/TestModelList",
