--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_TestModelEdit.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_TestModelEdit.cshtml
@@ -4,8 +4,8 @@
 @using Msh.WebApp.TagHelpers
 @model Msh.HotelCache.Models.Hotels.TestModel;
 @{
-	var success = ViewBag.Success as SuccessAlert;
-	var formAction = success?.FormAction ?? "TestModelAdd";
+	var formParam= ViewBag.EditFormParam as EditFormParam;
+	var formAction = formParam?.FormAction ?? "TestModelAdd";
 	var title = ViewData["Title"];
 }
 
@@ -14,7 +14,7 @@
 	<p></p>
 </div>
 
-@await Html.PartialAsync("Admin/_AdminSaveSuccess", success)
+@await Html.PartialAsync("Admin/_AdminSaveSuccess", formParam)
 
 <div class="row">
 	<div class="col-12">
@@ -28,7 +28,7 @@
 
 					<div class="form-group mb-3">
 						<label asp-for="Code" class="control-label"></label>&nbsp; <info-icon name="info-code" />
-						@await Html.PartialAsync("Hotels/_EditCode", success)
+						@await Html.PartialAsync("Hotels/_EditCode", formParam)
 					</div>
 
 					<div class="form-group mb-3">
