REAFCTOR Add hidden code fields

--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Dev/ConfigStateList.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Dev/ConfigStateList.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
 @using Msh.Admin.Models.Const
+@using Msh.WebApp.Areas.Admin.Models
 @using Msh.WebApp.TagHelpers
 
 @model List<Msh.Common.Models.Configuration.ConfigState>
