--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelBookEditDates.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelBookEditDates.cshtml
@@ -8,9 +8,13 @@
 
 @await Component.InvokeAsync("AdminMenu", new { menuName = AdminConst.MenuHotels, currentItem = "HotelList" })
 
-<input type="hidden" id="edit-type" value="item-dates"/>
-<input type="hidden" id="item-code" value="" />
-<input type="hidden" id="hotel-code" value="@hotelCode" />
+@await Html.PartialAsync("_HotelCodeHiddenFields", new HotelCodeHiddenFieldsVm
+{
+	UseHotel = true,
+	HotelCode = @hotelCode,
+	Code = "",
+	EditType = "item-options"
+})
 
 <div class="text-center">
 	<h1 class="display-6">@title for @hotelCode</h1>
