Update fix some names, scripts. Remove usings...
Add save return partial
Change z-index for modal

--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/DiscountEditRatePlansDisable.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/DiscountEditRatePlansDisable.cshtml
@@ -1,5 +1,4 @@
-﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
-@using Msh.WebApp.Areas.Admin.Models
+﻿@using Msh.WebApp.Areas.Admin.Models
 @using Msh.WebApp.TagHelpers
 @model Msh.WebApp.Models.Admin.ViewModels.CodeCheckListVm
 @{
