--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelAdd.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelAdd.cshtml
@@ -5,7 +5,7 @@
     ViewBag.EditFormParam = new EditFormParam
     {
 	    ModelName = "Hotel",
-	    ReturnUrl = "/admin/hotels/hotellist",
+	    ReturnUrl = "/admin/hotels/hotelslist",
 	    ReturnText = "Hotels List",
 		KeyPropertyLabel = "Hotel Code",
 		KeyPropertyName = "HotelCode",
