--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelsList.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelsList.cshtml
@@ -8,7 +8,7 @@
 	ViewBag.InfoIcons = "Hotels";
 }
 
-@await Component.InvokeAsync("AdminMenu", new { menuName = AdminConst.MenuHotels, currentItem = "HotelList" })
+@await Component.InvokeAsync("AdminMenu", new { menuName = AdminConst.MenuHotels, currentItem = "HotelsList" })
 
 <div class="text-center">
 	<h1 class="display-6">@title</h1>
@@ -31,10 +31,10 @@
 @* Include the Save/Return/Publish/Archive/Load/Lock/Info buttons *@
 @await Html.PartialAsync("_PublishArchiveLoadLock", new PublishArchiveLoadLockVm
 {
-	OnclickPublish = "window.mshMethods.publishHotels(false)",
-	OnclickArchive = "window.mshMethods.archiveHotels(false)",
-	OnclickLoad = "window.mshMethods.loadHotels(false)",
-	OnclickLock = "window.mshMethods.lockHotels(false)",
+	OnclickPublish = "window.mshMethods.publishData(false)",
+	OnclickArchive = "window.mshMethods.archiveData(false)",
+	OnclickLoad = "window.mshMethods.loadData()",
+	OnclickLock = "window.mshMethods.lockData()",
 	ReturnUrl = "/Admin/Hotels",
 	ReturnText = ConstReturnText.ReturnToDash,
 })
@@ -63,6 +63,7 @@
 @section Scripts{
 	<script src="~/js/mshapp/msh-ApiService.js"></script>
 	<script src="~/js/mshapp/mshapp.js"></script>
+	<script src="~/js/admin/hotels/msh-admin-palls.js"></script>
 	<script src="~/js/admin/hotels/msh-admin-hotels.js"></script>
 }
 
