--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/RatePlanAdd.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/RatePlanAdd.cshtml
@@ -9,9 +9,9 @@
     ViewBag.EditFormParam = new EditFormParam
     {
 	    ModelName = "RoomRatePlan",
-	    ReturnUrl = "/admin/hotels/RatePlanList?hotelCode=" + hotelCode,
-	    ReturnText = "Rate Plan List",
-	    KeyPropertyLabel = "Rate Plan Code",
+	    ReturnUrl = "/admin/hotels/RatePlansList?hotelCode=" + hotelCode,
+	    ReturnText = "Rate Plans List",
+	    KeyPropertyLabel = "Rate Plans Code",
 	    KeyPropertyName = "RatePlanCode",
 	    KeyPropertyValue = Model.RatePlanCode,
 	    FormAction = "RatePlanAdd"
