--- a/solution/Msh/Msh.WebApp/Views/Shared/_Layout.cshtml
+++ b/solution/Msh/Msh.WebApp/Views/Shared/_Layout.cshtml
@@ -53,6 +53,8 @@
 	@await RenderSectionAsync("InfoItems", required: false)
 	
     @await Html.PartialAsync("Admin/_AdminPublish", "")
+	
+	@await Html.PartialAsync("Admin/_AdminSaveReturn", "")
 
 </div>
 
