--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Fp/FpErrorBankList.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Fp/FpErrorBankList.cshtml
@@ -1,5 +1,4 @@
-﻿@using Microsoft.AspNetCore.Mvc.TagHelpers
-@using Msh.Admin.Models.Const
+﻿@using Msh.Admin.Models.Const
 @using Msh.WebApp.Areas.Admin.Models
 @using Msh.WebApp.TagHelpers
 @{
