--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/RatePlansList.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/RatePlansList.cshtml
@@ -9,7 +9,7 @@
 
 @await Component.InvokeAsync("AdminMenu", new
 {
-	menuName = AdminConst.MenuHotels, currentItem = "RatePlanList"
+	menuName = AdminConst.MenuHotels, currentItem = "RatePlansList"
 })
 
 @await Html.PartialAsync("Hotels/_HiddenHotelInputs", @Model as HotelListVm)
