Update views for changes to return and save

--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/CoinCorner/Global.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/CoinCorner/Global.cshtml
@@ -144,6 +144,7 @@
 			{
 				ReturnUrl = "/Admin/CoinCorner/",
 				ReturnText = ConstReturnText.ReturnToDash,
+				ButtonType = SaveReturnTypes.Submit,
 				SaveOperation = "submit"
 			})
 
@@ -300,5 +301,6 @@
 @section Scripts {
 	<script src="~/js/mshapp/msh-apiservice.js"></script>
 	<script src="~/js/mshapp/mshapp.js"></script>
+	<script src="~/js/admin/msh-admin-palls.js"></script>
 	<script src="~/js/admin/pay/msh-admin-coincorner.js"></script>
 }
