--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Dev/ConfigStateList.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Dev/ConfigStateList.cshtml
@@ -45,5 +45,6 @@
 @section Scripts {
 	<script src="~/js/mshapp/msh-apiservice.js"></script>
 	<script src="~/js/mshapp/mshapp.js"></script>
+	<script src="~/js/admin/msh-admin-palls.js"></script>
 	<script src="~/js/admin/dev/msh-dev-config-states.js"></script>
 }
