--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/DiscountEditDatesBook.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/DiscountEditDatesBook.cshtml
@@ -30,7 +30,8 @@
 {
 	ReturnUrl = $"/Admin/Hotels/DiscountsList?hotelCode={@hotelCode}&code={@itemCode}",
 	ReturnText = ConstReturnText.ReturnToList,
-	SaveOperation = "#save-dates"
+	ButtonType = SaveReturnTypes.EventListener,
+	SaveOperation = "save-dates"
 })
 
 
