--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/DiscountsList.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/DiscountsList.cshtml
@@ -37,10 +37,6 @@
 @* Include the Save/Return/Publish/Archive/Load/Lock/Info buttons *@
 @await Html.PartialAsync("_PublishArchiveLoadLock",  new PublishArchiveLoadLockVm
 {
-	OnclickPublish = "window.mshMethods.publishDiscounts()",
-	OnclickArchive = "window.mshMethods.archiveDiscounts()",
-	OnclickLoad = "window.mshMethods.loadDiscounts()",
-	OnclickLock = "window.mshMethods.lockDiscounts()",
 	ReturnUrl = "/Admin/Hotels",
 	ReturnText = ConstReturnText.ReturnToDash,
 })
@@ -89,6 +85,7 @@
 @section Scripts{
 	<script src="~/js/mshapp/msh-ApiService.js"></script>
 	<script src="~/js/mshapp/mshapp.js"></script>
+	<script src="~/js/admin/msh-admin-palls.js"></script>
 	<script src="~/js/admin/hotels/msh-admin-discounts.js"></script>
 }
 
