--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/ExtraEditDates.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/ExtraEditDates.cshtml
@@ -33,7 +33,8 @@
 {
 	ReturnUrl = "/Admin/Hotels/ExtrasList?hotelCode={hotelCode}&code={itemCode}",
 	ReturnText = ConstReturnText.ReturnToList,
-	SaveOperation = "#save-dates"
+	ButtonType = SaveReturnTypes.EventListener,
+	SaveOperation = "save-dates"
 })
 
 
