--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/SpecialEditOptions.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/SpecialEditOptions.cshtml
@@ -32,7 +32,8 @@
 {
 	ReturnUrl = $"/Admin/Hotels/SpecialsList?hotelCode={hotelCode}&code={itemCode}",
 	ReturnText = ConstReturnText.ReturnToList,
-	SaveOperation = "#save-options"
+	ButtonType = SaveReturnTypes.EventListener,
+	SaveOperation = "save-options"
 })
 
 
