--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Loggers/LogXmlConfigEditItems.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Loggers/LogXmlConfigEditItems.cshtml
@@ -41,6 +41,7 @@
 {
 	ReturnUrl = "Admin/Loggers",
 	ReturnText = ConstReturnText.ReturnToDash,
+	ButtonType = SaveReturnTypes.OnclickMethod,
 	SaveOperation = "window.mshMethods.saveData()"
 })
 
@@ -77,5 +78,6 @@
 @section Scripts {
 	<script src="~/js/mshapp/msh-apiservice.js"></script>
 	<script src="~/js/mshapp/mshapp.js"></script>
+	<script src="~/js/admin/msh-admin-palls.js"></script>
 	<script src="~/js/admin/loggers/msh-admin-logxmlconfig-items.js"></script>
 }
