--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Ows/OwsConfigEdit.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Ows/OwsConfigEdit.cshtml
@@ -114,6 +114,7 @@
 			{
 				ReturnUrl = "/Admin/Ows/",
 				ReturnText = ConstReturnText.ReturnToDash,
+				ButtonType = SaveReturnTypes.Submit,
 				SaveOperation = "submit"
 			})
 
@@ -252,5 +253,6 @@
 @section Scripts {
 	<script src="~/js/mshapp/msh-apiservice.js"></script>
 	<script src="~/js/mshapp/mshapp.js"></script>
+	<script src="~/js/admin/msh-admin-palls.js"></script>
 	
 }
