--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Ows/OwsConfigEditTriggers.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Ows/OwsConfigEditTriggers.cshtml
@@ -36,7 +36,8 @@
 {
 	ReturnUrl = "/Admin/Ows/",
 	ReturnText = ConstReturnText.ReturnToDash,
-	SaveOperation = "#save-ows-config-triggers"
+	ButtonType = SaveReturnTypes.EventListener,
+	SaveOperation = "save-ows-config-triggers"
 })
 
 
