--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_DiscountEdit.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_DiscountEdit.cshtml
@@ -195,7 +195,8 @@
 			{
 				ReturnUrl = string.Format("/Admin/Hotels/DiscountsList?hotelCode={0}", @hotelCode),
 				ReturnText = ConstReturnText.ReturnToDash,
-				SaveOperation = "#save-discounts"
+				ButtonType = SaveReturnTypes.EventListener,
+				SaveOperation = "save-discounts"
 			})
 
 		</form>
