--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_DiscountsTable.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_DiscountsTable.cshtml
@@ -112,7 +112,7 @@
 			<td style="width:80px;">
 				<div class="cell-outer">
 					<div class="cell-inner">
-						<a asp-controller="Hotels" asp-action="DiscountEditErrors" asp-route-hotelCode="@Model.HotelCode" asp-route-code="@item.Code">
+						<a asp-controller="Hotels" asp-action="DiscountErrors" asp-route-hotelCode="@Model.HotelCode" asp-route-code="@item.Code">
 							<i class="fas fa-exclamation-triangle"></i>
 						</a>
 					</div>
