--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_ExtraEdit.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_ExtraEdit.cshtml
@@ -90,6 +90,7 @@
 			{
 				ReturnUrl = "/Admin/Hotels/ExtrasList",
 				ReturnText = ConstReturnText.ReturnToList,
+				ButtonType = SaveReturnTypes.EventListener,
 				SaveOperation = "submit"
 			})
 
