--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_RatePlanEdit.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_RatePlanEdit.cshtml
@@ -282,6 +282,7 @@
 			{
 				ReturnUrl = $"/Admin/Hotels/RatePlansList?hotelCode={@hotelCode}",
 				ReturnText = ConstReturnText.ReturnToDash,
+				ButtonType = SaveReturnTypes.Submit,
 				SaveOperation = "submit"
 			})
 
