--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_RoomTypeEdit.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_RoomTypeEdit.cshtml
@@ -176,6 +176,7 @@
 			{
 				ReturnUrl = $"/Admin/Hotels/RoomTypeList?hotelCode={hotelCode}",
 				ReturnText = ConstReturnText.ReturnToDash,
+				ButtonType = SaveReturnTypes.Submit,
 				SaveOperation = "submit"
 			})
 
