--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_SpecialEdit.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_SpecialEdit.cshtml
@@ -115,7 +115,8 @@
 			{
 				ReturnUrl = $"/Admin/Hotels/SpecialsList?hotelCode={hotelCode}",
 				ReturnText = ConstReturnText.ReturnToDash,
-				SaveOperation = "#save-ows-config-triggers"
+				ButtonType = SaveReturnTypes.EventListener,
+				SaveOperation = "save-ows-config-triggers"
 			})
 
 		</form>
