--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/_HotelCodeHiddenFields.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/_HotelCodeHiddenFields.cshtml
@@ -1,5 +1,6 @@
 ﻿@model Msh.WebApp.Areas.Admin.Models.HotelCodeHiddenFieldsVm
 
+<input type="hidden" id="edit-type" value="@Model.EditType" />
 <input type="hidden" id="use-hotel" value="@Model.UseHotel"/>
 <input type="hidden" id="hotel-code" value="@Model.HotelCode" />
-<input type="hidden" id="item-code" value="@Model.HotelCode" />
+<input type="hidden" id="item-code" value="@Model.Code" />
