--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Dev/ScriptsTest.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Dev/ScriptsTest.cshtml
@@ -18,5 +18,6 @@
 @section Scripts{
 
 	<script src="/js/mshapp/mshapp.js"></script>
+	<script src="~/js/admin/msh-admin-palls.js"></script>
 	<script src="/js/admin/dev/msh-dev-scripts-test.js"></script>
 }
