--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Fp/FpConfigEdit.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Fp/FpConfigEdit.cshtml
@@ -345,6 +345,7 @@
 			{
 				ReturnUrl = "/Admin/Fp/",
 				ReturnText = ConstReturnText.ReturnToDash,
+				ButtonType = SaveReturnTypes.Submit,
 				SaveOperation = "submit"
 			})
 
@@ -679,5 +680,6 @@
 @section Scripts {
 	<script src="~/js/mshapp/msh-apiservice.js"></script>
 	<script src="~/js/mshapp/mshapp.js"></script>
+	<script src="~/js/admin/msh-admin-palls.js"></script>
 	
 }
