--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/DiscountEditOneTime.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/DiscountEditOneTime.cshtml
@@ -144,6 +144,7 @@
 			{
 				ReturnUrl = $"/Admin/Hotels/DiscountsList?hotelCode={@hotelCode}&code={@itemCode}",
 				ReturnText = ConstReturnText.ReturnToList,
+				ButtonType = SaveReturnTypes.Submit,
 				SaveOperation = "submit"
 			})
 
