--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelBookEditDates.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelBookEditDates.cshtml
@@ -31,7 +31,8 @@
 {
 	ReturnUrl = "/Admin/Hotels/",
 	ReturnText = ConstReturnText.ReturnToList,
-	SaveOperation = "#save-dates"
+	ButtonType = SaveReturnTypes.EventListener,
+	SaveOperation = "save-dates"
 })
 
 @section InfoItems {
