--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelStayEditDates.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/HotelStayEditDates.cshtml
@@ -32,7 +32,8 @@
 {
 	ReturnUrl = "/Admin/Hotels/",
 	ReturnText = ConstReturnText.ReturnToList,
-	SaveOperation = "#save-dates"
+	ButtonType = SaveReturnTypes.EventListener,
+	SaveOperation = "save-dates"
 })
 
 @section InfoItems {
