--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/RoomTypesList.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/RoomTypesList.cshtml
@@ -54,6 +54,7 @@
 @section Scripts{
 	<script src="~/js/mshapp/msh-ApiService.js"></script>
 	<script src="~/js/mshapp/mshapp.js"></script>
+	<script src="~/js/admin/msh-admin-palls.js"></script>
 	<script src="~/js/admin/hotels/msh-admin-roomtype.js"></script>
 }
 
