--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/SpecialEditRatePlans.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/SpecialEditRatePlans.cshtml
@@ -34,6 +34,7 @@
 {
 	ReturnUrl = $"/Admin/Hotels/SpecialsList?hotelCode={hotelCode}&code={itemCode}",
 	ReturnText = ConstReturnText.ReturnToList,
+	ButtonType = SaveReturnTypes.OnclickMethod,
 	SaveOperation = "window.mshMethods.saveCodeCheckList()"
 })
 
