--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/TestModelList.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Hotels/TestModelList.cshtml
@@ -82,6 +82,7 @@
 @section Scripts {
 	<script src="~/js/mshapp/mshapp.js"></script>
 	<script src="~/js/mshapp/msh-apiservice.js"></script>
+	<script src="~/js/admin/msh-admin-palls.js"></script>
 	<script src="~/js/admin/hotels/msh-admin-testmodel.js"></script>
 }
 
