--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Ows/OwsConfigEditMap.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Ows/OwsConfigEditMap.cshtml
@@ -37,7 +37,8 @@
 {
 	ReturnUrl = "/Admin/Ows/",
 	ReturnText = ConstReturnText.ReturnToDash,
-	SaveOperation = "#save-ows-config-maps"
+	ButtonType = SaveReturnTypes.EventListener,
+	SaveOperation = "save-ows-config-maps"
 })
 
 @section Scripts {
