--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_HotelEdit.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Shared/Hotels/_HotelEdit.cshtml
@@ -126,6 +126,7 @@
 			{
 				ReturnUrl = "/Admin/Hotels/",
 				ReturnText = ConstReturnText.ReturnToList,
+				ButtonType = SaveReturnTypes.EventListener,
 				SaveOperation = "submit"
 			})
 
