--- a/solution/Msh/Msh.WebApp/Areas/Admin/Views/Users/UserList.cshtml
+++ b/solution/Msh/Msh.WebApp/Areas/Admin/Views/Users/UserList.cshtml
@@ -82,7 +82,9 @@
 }
 
 @section Scripts {
+	<script src="~/js/mshapp/msh-apiservice.js"></script>
 	<script src="~/js/mshapp/mshapp.js"></script>
+	<script src="~/js/admin/msh-admin-palls.js"></script>
 	<script src="~/js/admin/hotels/msh-admin-hotels.js"></script>
 }
 
